add navigation section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                 Love Running
             </h1>
         </a>
+        <nav>
+            <Ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
+            </Ul>
+        </nav>
     </header>
     <!-- Main content-->
     <main>Main content</main>
