--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </h1>
         </a>
         <nav>
-            <Ul>
-                <li><a href="">Home</a></li>
+            <Ul id="menu">
+                <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
             </Ul>
