--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 Love Running
             </h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <Ul id="menu">
                 <li><a href="" class="active">Home</a></li>
