Add font awesomw and first footer link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <!-- Main content-->
     <main>Main content</main>
     <!-- Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page(opens in a new tab)">
+                <i class="fa-brands fa-facebook"></i>
+            </a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
+
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/14c4b12b2c.js" crossorigin="anonymous"></script>
 </body>
 </html>
