--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <Ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -40,12 +40,26 @@
     <!-- Footer-->
     <footer>
         <ul>
-            <li><a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page(opens in a new tab)">
+            <li>
+                <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page(opens in a new tab)">
                 <i class="fa-brands fa-facebook"></i>
-            </a></li>
-            <li></li>
-            <li></li>
-            <li></li>
+                </a>
+            </li>
+            <li>
+                <a href="https://x.com/" target="_blank" rel="noopener" aria-label="visit our X page(opens in a new tab)">
+                <i class="fa-brands fa-x-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="visit our Youtube page(opens in a new tab)">
+                <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page(opens in a new tab)">
+                <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
