style footer icons for all screen size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>Main content</main>
     <!-- Footer-->
     <footer>
-        <ul>
+        <ul id="social-network">
             <li>
                 <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page(opens in a new tab)">
                 <i class="fa-brands fa-facebook"></i>
