Add  reasons image

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                         <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg">
+                        
+                    </div>
+                </div>
             </div>
         </section>
     </main>
