Add sign up form to sign up page

--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,27 @@
         </nav>
     </header>
     <!-- Main content-->
-    <main>Main content</main>
+    <main>
+        <section id="signup">
+            <form action="https://formdump.codeinstitute.net" id="signup-form" method="post">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+                <label for="first-name">First name:</label>
+                <input type="text" id="first-name" name="first-name" required><br>
+                <label for="last-name">Last name:</label>
+                <input type="text" id="last-name" name="last-name" required><br>
+                <label for="email-address">First name:</label>
+                <input type="text" id="email-address" name="email-address" required><br>
+                <label for="road">Road</label>
+                <input type="radio" name="running_preference" id="road"  required><br>
+                <label for="trial">Trial</label>
+                <input type="radio" name="running_preference" id="trial" required><br>
+                <label for="both">Both</label>
+                <input type="radio" name="running_preference" id="both" required><br>
+                <input type="submit" value="Let's Run!">
+            </form>
+        </section>
+        
+    </main>
     <!-- Footer-->
     <footer>
         <ul id="social-network">
