add signup form background image and som style

--- a/signup.html
+++ b/signup.html
@@ -46,12 +46,14 @@
                 <input type="text" id="last-name" name="last-name" required><br>
                 <label for="email-address">First name:</label>
                 <input type="text" id="email-address" name="email-address" required><br>
-                <label for="road">Road</label>
-                <input type="radio" name="running_preference" id="road"  required><br>
-                <label for="trial">Trial</label>
-                <input type="radio" name="running_preference" id="trial" required><br>
-                <label for="both">Both</label>
-                <input type="radio" name="running_preference" id="both" required><br>
+                <div class="radio-buttons">
+                    <label for="road">Road</label>
+                    <input type="radio" name="running_preference" id="road"  required><br>
+                    <label for="trial">Trial</label>
+                    <input type="radio" name="running_preference" id="trial" required><br>
+                    <label for="both">Both</label>
+                    <input type="radio" name="running_preference" id="both" required><br>
+                </div>
                 <input type="submit" value="Let's Run!">
             </form>
         </section>
