--- a/signup.html
+++ b/signup.html
@@ -41,20 +41,29 @@
             <form action="https://formdump.codeinstitute.net" id="signup-form" method="post">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
                 <label for="first-name">First name:</label>
-                <input type="text" id="first-name" name="first-name" required><br>
+                <input type="text" id="first-name" name="first-name" class="text-input"  required>
+                <br>
                 <label for="last-name">Last name:</label>
-                <input type="text" id="last-name" name="last-name" required><br>
+                <input type="text" id="last-name" name="last-name" class="text-input" required>
+                <br>
                 <label for="email-address">First name:</label>
-                <input type="text" id="email-address" name="email-address" required><br>
+                <input type="text" id="email-address" name="email-address" class="text-input" required>
+                <br>
                 <div class="radio-buttons">
-                    <label for="road">Road</label>
-                    <input type="radio" name="running_preference" id="road"  required><br>
-                    <label for="trial">Trial</label>
-                    <input type="radio" name="running_preference" id="trial" required><br>
-                    <label for="both">Both</label>
-                    <input type="radio" name="running_preference" id="both" required><br>
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trial">Trial</label>
+                        <input type="radio" name="running_preference" id="trial" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
+                    </div>
                 </div>
-                <input type="submit" value="Let's Run!">
+                <input type="submit" value="Let's Run!" class="join-button">
             </form>
         </section>
         
