email validation correction

--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                 <input type="text" id="last-name" name="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">First name:</label>
-                <input type="text" id="email-address" name="email-address" class="text-input" required>
+                <input type="email" id="email-address" name="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
