--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,7 @@
     <!-- Main content-->
     <main>
         <section id="signup">
+            <h2 class="hidden-heading">Gallery</h2>
             <form action="https://formdump.codeinstitute.net" id="signup-form" method="post">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
                 <label for="first-name">First name:</label>
