--- a/signup.html
+++ b/signup.html
@@ -41,13 +41,13 @@
             
             <form action="https://formdump.codeinstitute.net" id="signup-form" method="post">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
-                <label for="first-name">First name:</label>
+                <label for="first-name">First Name</label>
                 <input type="text" id="first-name" name="first-name" class="text-input"  required>
                 <br>
-                <label for="last-name">Last name:</label>
+                <label for="last-name">Last Name</label>
                 <input type="text" id="last-name" name="last-name" class="text-input" required>
                 <br>
-                <label for="email-address">First name:</label>
+                <label for="email-address">Email Address></label>
                 <input type="email" id="email-address" name="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
