form name changes

--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                 <label for="last-name">Last Name</label>
                 <input type="text" id="last-name" name="last-name" class="text-input" required>
                 <br>
-                <label for="email-address">Email Address></label>
+                <label for="email-address">Email Address</label>
                 <input type="email" id="email-address" name="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
